# demo-molecule

./: .ansible-lint  .bashrc  .gitignore  Demo.ipynb  Dockerfile  LICENSE  README.md  ansible.cfg  install_docker.sh  pyproject.toml  requirements.yml  run.sh  venv.sh
.github/workflows/: ansible-lint.yml
dockerfiles/rockylinux8/: Dockerfile
dockerfiles/ubuntu22/: Dockerfile
docs/: run.md
inventories/group_vars/all/: bash-profile.yml  nginx.yml  php.yml
inventories/host_vars/demo_01/: app.yml  php.yml
inventories/host_vars/demo_02/: app.yml  php.yml
molecule/default/: Dockerfile  converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_default.py
playbooks/: 01_tests.yml
roles.internal/demo_app/: README.md
roles.internal/demo_app/meta/: main.yml
roles.internal/demo_app/tasks/: base.yml  main.yml  nginx.yml  php.yml
roles.internal/demo_app/templates/: bashrc.j2  default.conf.j2  index.php.j2
roles.internal/demo_nginx/: README.md
roles.internal/demo_nginx/meta/: main.yml
roles.internal/demo_nginx/tasks/: main.yml
roles.internal/demo_nginx/templates/: default.conf.j2  index.html.j2
