[tool.poetry]
name = "demo-molecule"
version = "0.1.0"
description = ""
authors = ["Build Rennes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^68.2.2"
wheel = "^0.41.2"
netifaces = "^0.11.0"
ansible-core = "^2.15.3"
ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
jmespath = "^1.0.1"
molecule = "^6.0.2"
molecule-plugins = {extras = ["docker"], version = "^23.5.0"}
testinfra = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
